# rKATS

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  rkats.Rproj
R/: count_kmers.R  katss.R  plotting.R
data/: bound.txt  input.txt  rbfox2_enrichments.rda  rbfox2_pwms.rda  rbfox2_seqs.rda
man/: align_kmers.Rd  cor.pwm.Rd  count_kmers.Rd  enrichments.Rd  get_pwms.Rd  hamming_distance.Rd  ikke.Rd  pad_kmer.Rd  plot_logo.Rd  rbfox2_enrichments.Rd  rbfox2_pwms.Rd  rbfox2_seqs.Rd  rkats-package.Rd  rkatss-package.Rd  seqseq.Rd
src/: Makevars  katss_init.c  katss_wrapper.c
src/ikke/: CMakeLists.txt
src/ikke/source/: CMakeLists.txt
src/ikke/source/katss/: CMakeLists.txt
src/ikke/source/katss/KmerCounter/: CMakeLists.txt
src/ikke/source/katss/KmerCounter/include/: counter.h  hash_functions.h
src/ikke/source/katss/KmerCounter/source/: CMakeLists.txt  counter.c  enrichments.c  katss_core.h  recounter.c  seqseq.c  tables.c  uncounter.c
src/ikke/source/katss/helpers/: CMakeLists.txt  rnafiles.c  rnafiles.h
src/ikke/source/tinycthread/: CMakeLists.txt
src/katss/: CMakeLists.txt
src/katss/source/: CMakeLists.txt
src/katss/source/katss/KmerCounter/: CMakeLists.txt
src/katss/source/katss/KmerCounter/include/: bootstrap.h  counter.h  enrichments.h  katss.h
src/katss/source/katss/KmerCounter/source/: CMakeLists.txt  bootstrap.c  counter.c  enrichments.c  hash_functions.c  katss_core.h  katss_count.c  katss_enrichment.c  katss_helpers.c  katss_helpers.h  katss_ikke.c  recounter.c  seqseq.c  tables.c  thread_safe_rand.c  thread_safe_rand.h  uncounter.c  ushuffle.c  ushuffle.h
src/katss/source/katss/helpers/: CMakeLists.txt  memory_utils.c  memory_utils.h  t_test.h  t_test1.c  t_test2.c  toms708.c  toms708.h
src/katss/source/seqfile/: CMakeLists.txt  LICENSE
src/katss/source/seqfile/include/: CMakeLists.txt  seqfile.h
src/katss/source/seqfile/source/: CMakeLists.txt  readfasta.c  readfastq.c  readreads.c  seqf_core.h  seqf_read.c  seqf_read.h  seqferrno.c  seqflib.c  seqfread.c  seqfstrerror.c
src/mtKmerCounter/: CMakeLists.txt
src/mtKmerCounter/include/: counter.h  enrichments.h  seqseq.h
src/mtKmerCounter/source/: counter.c  enrichments.c  hash_functions.c  katss_core.h  seqseq.c  tables.c  uncounter.c
src/mtKmerCounter/source/helpers/: memory_utils.c  rnafiles.c  rnafiles.h  string_utils.c  string_utils.h
src/mtKmerCounter/source/tinycthread/: CMakeLists.txt
